Initial commit – added core modules

--- a/configs/config.ini
+++ b/configs/config.ini
@@ -1,7 +1,8 @@
 [Application]
 log_level = INFO
-capture_region_x = 820
-capture_region_y = 400
+# IMPORTANT: Set uses_desktop_coordinates = true if you have Windows scaling enabled
+# This tells the system to scale coordinates from desktop to actual display resolution
+uses_desktop_coordinates = true
 capture_region_width = 280
 capture_region_height = 280
 capture_region_x_offset = 0
@@ -9,6 +10,7 @@ capture_region_y_offset = 0
 target_class_id = 0
 input_method = arduino
 aim_activation_key = RMB
+
 
 [Detection]
 confidence_threshold = 0.4
@@ -37,7 +39,7 @@ warmup_iterations = 10
 target_priority = 1
 detection_mode = tracking
 min_player_size = 10,10
-max_player_size = 250,250
+max_player_size = 500,500
 ethical_mode = production
 
 [arduino]
@@ -51,6 +53,13 @@ shooting_height_ratios = {"head":0.15,"neck":0.25,"chest":0.35}
 altura_tiro = 1.5
 target_areas = ["head","neck","chest"]
 smoothing_factor = 5
+# Kalman filter settings
+kalman_transition_cov = 0.01
+kalman_observation_cov = 0.01
+# Delay between movements
+delay = 5e-05
+# Aim height adjustment
+aim_height = 0.25
 
 [anti_recoil]
 enabled = true
@@ -72,4 +81,3 @@ deactivation_key = f2
 
 [hip_mode_enabled]
 enabled = true
-
